
Changes file for atech-tools
==================================================
See Authors for more description on developers
--------------------------------------------------

0.3.10 (current)
    * plugins extended with executeCommandDialogReturn
    * TranslationTool Db context, some admin classes


0.3.9
    * plugins extended with executeCommandDialogReturn
    * ATDataAbstract
    * started TranslationTool
    * ...
    
    
0.3.8
    * ...


0.3.7
    * Added PrintDialog* classes and also abstract class for printing (with iText)

0.3.6
    * Minor changes here and there: DataAccess, DbTool, Selector, ...


0.3.4
    * Startup ................

0.3.3
    * fixed Calendar (big bug with February calendar display)

0.3.2
    * added Statistics functionality (work in progress)
    * added DecimalHandler
    * added ATechConverter, which should be super class to all converters
    * STARTUP 1.1: minor changes

0.3.1
    * added library Nano Xml 2 Lite
    * added com.jeans.httpclient (Http Client)
    * added weiss.util (for Http Client)

0.2.11
    * Minor changes to ATDataAccessAbstract, SelectorAbstract
    * STARTUP 1.0 [1.0.1]: minor changes into startup files, bug removed. In [] we have internal version

0.2.10
    * Added graph framework (ATGraphFramework), based on JFreeChart
    * changed ant and some source files, so that startup files creation methods are now packed 
      as seperate jar. Changes to those methods, will be noted here, with STARTUP tag.
    * STARTUP 1.0: First version of standalone startup classes (support for windows, linux, freebsd)

0.2.9
    * fixed About (added version to About screen)

0.2.8
    * added SwingUtilities
    * fixed RestoreSelectorDialog

0.2.7
    * Changed ATDataAccessAbstract (date, time)
    * changes to ATSwingUtils (added some methods for components)

0.2.6
    * Added Transfer classes

0.2.5
    * Export/Import, we force writing into file that is utf-8 encoded

0.2.4